--- a/yq/src/main/resources/test.yaml
+++ b/yq/src/main/resources/test.yaml
@@ -1,22 +1,19 @@
 quotes:
   - id: 1
-    quote: It is bad for a young man to sin; but it is worse for an old man to sin.
-    author: Abu Bakr (R.A)
+    quote: This is a custom quote
+    author: Thomas
   - id: 2
-    quote: If You Are Out To Describe The Truth, Leave Elegance To The Tailor.
-    author: Albert Einstein
+    quote: This is a custom quote
+    author: Alice
   - id: 3
     quote: >-
-      O man you are busy working for the world, and the world is busy trying to
-      turn you out.
-    author: Abu Bakr (R.A)
+      This is a custom quote
+    author: Bob
   - id: 4
     quote: >-
-      While children are struggling to be unique, the world around them is
-      trying all means to make them look like everybody else.
-    author: Abdul Kalam
+      This is a custom quote
+    author: Charlie
   - id: 5
     quote: >-
-      These Capitalists Generally Act Harmoniously And In Concert, To Fleece The
-      People.
-    author: Abraham Lincoln
+      This is a custom quote
+    author: Zach
